test/Interop/Cxx/reference/reference-cannot-import-diagnostic.code
// RUN: rm -rf %t
// RUN: split-file %s %t
// RUN: %target-language-frontend -typecheck -verify -I %t/Inputs  %t/test.code  -enable-experimental-cxx-interop
// RUN: not %target-language-frontend -typecheck -I %t/Inputs  %t/test.code  -enable-experimental-cxx-interop 2>&1 | %FileCheck %s

//--- Inputs/module.modulemap
module Test {
    header "test.h"
    requires cplusplus
}

//--- Inputs/test.h

void acceptRValueRef(int &&);

template<class T>
void notStdMove(T &&);

//--- test.code

import Test

public fn test() {
  var x: CInt = 2
  acceptRValueRef(consuming: x)

  notStdMove(x) // expected-error {{cannot find 'notStdMove' in scope}}
  // CHECK: note: function 'notStdMove' unavailable (cannot import)
  // CHECK: note: C++ functions with rvalue reference parameters are unavailable in Codira
}
